Correction de la scrollbar

--- a/src/index.sass
+++ b/src/index.sass
@@ -1,7 +1,7 @@
 *
 	box-sizing: border-box
 	font-family: Nunito Sans, Helvetica, Verdana, Geneva, Tahoma, sans-serif
-	scrollbar-color: rebeccapurple green
+	scrollbar-color: red #550000
   	scrollbar-width: thin
 	&::-webkit-scrollbar
 		width: 8px  
@@ -15,7 +15,8 @@
 	&::-webkit-scrollbar-corner
 		background: #550000
 	&::-webkit-scrollbar-button
-		background: blue
+		background: #6d2727
+
 html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockquote, pre, a, abbr, acronym, address, big, cite, code, del, dfn, em, img, ins, kbd, q, s, samp, small, strike, strong, sub, sup, tt, var, b, u, i, center, dl, dt, dd, ol, ul, li, fieldset, form, label, legend, table, caption, tbody, tfoot, thead, tr, th, td, article, aside, canvas, details, embed, figure, figcaption, footer, header, hgroup, menu, nav, output, ruby, section, summary, time, mark, audio, video
 	margin: 0 
 	padding: 0
